z-index solved

--- a/my-app/src/assets/Checkout.css
+++ b/my-app/src/assets/Checkout.css
@@ -30,8 +30,8 @@ input {
 }
 
 .checkout {
+  position: relative;
   height: 100%;
-  z-index: -1;
 }
 
 .bread {
